   have been used - having both mechanisms was unnecessary and proved confusing. (Note 
   that many files have required minor refactoring to make this change transparent).
   Users must now use SpringAdaptor *instead* of SpringApplication which has been removed.

Bug Fixes
=========

 * (SC104) Possible NPE in Sybase specific JDBC Connection.
 
3rd Party
========= 
            
=================================================
openadaptor3 production 3.4.5 Release Notes

See licence.txt for Licence information.
=================================================

Date: 16th June 2010
Author: openadaptor Core Team

openadaptor 3.4.5
=======

Connectors
==========

 * DynamicFileWriteConnector now implements IMetadataAware. For now all that is
   new is that the metadata is passed to the embedded ScriptProcessor. This is 
   in response to enhancement request SC102.

 * JMSReadConnector now implements IMetadataAware. JMSReadConnector now adds the 
   property 'populateMetada' which if true then the connector will populate the 
   adaptor message metadata from the JMSMessageProperties. The default is false 
   in order to maintain backwards compatibility with legacy behaviour.

 * JMSWriteConnector also implements IMetadataAware. It adds two new properties 
   'propagateMetadata' and 'overrideDestinationName'. 
   
   If 'propagateMetadata' is set then the metadata is used to help generate the 
   JMSMessage. In the case of the 'DefaultMessageGenerator' this means that the 
   metadata is mapped as JMS Message Properties. The default value of 'propagateMetadata' 
   is false to maintain backwards compatibility.
   
   By default the property 'overrideDestinationName' is not set. This is again to maintain
   backwards compatibility. If set then the metadata value at that key is used to define
   the jms destination for that message. 

 * (SC93) review CXF Web service read connector. CXF read connector separated from 